user module build-up